// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AsciiViews AsciiStatusbar displays statusBarMessage if no rows 1`] = `
<div>
  <div
    class="sc-jQrDum dtNTap"
  >
    <div
      class="sc-gIBqdA cudPKW"
    >
      Completed after 10  ms.
    </div>
  </div>
</div>
`;

exports[`AsciiViews AsciiStatusbar displays statusBarMessage if no rows 2`] = `
<div>
  <div
    class="sc-jQrDum dtNTap"
  >
    <div
      class="sc-fHeRUh hoBeiO"
    >
      <div
        class="sc-dkYRCH gygZe"
      >
        Max column width:
        <input
          class="sc-XxNYO bFvTmo"
          max="3"
          min="3"
          type="range"
          value="70"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`AsciiViews AsciiView displays bodyMessage if no rows 1`] = `
<div>
  <div
    class="sc-hiwPVj iAtUNW"
  >
    <div
      class="sc-bXTejn fUWLyH"
    >
      (no changes, no records)
    </div>
  </div>
</div>
`;

exports[`AsciiViews AsciiView does not display bodyMessage if rows 1`] = `
<div>
  <div
    class="sc-hiwPVj iAtUNW"
  >
    <pre
      class="sc-fbyfCU gZBEmR"
    >
      ╒═══╕
│x  │
╞═══╡
│"y"│
└───┘
    </pre>
  </div>
</div>
`;
